--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/erickvictor/Challenge-Project-Fullstack#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
