--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.12.0-alpha.1"
   },
   "devDependencies": {
